Bug 90143 - mouse-dpi-tool hint to compute resolution is wrong
Summary: mouse-dpi-tool hint to compute resolution is wrong
Status: RESOLVED FIXED
Alias: None
Product: libevdev
Classification: Unclassified
Component: Core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-22 17:26 UTC by rodrigo
Modified: 2015-04-23 00:39 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description rodrigo 2015-04-22 17:26:25 UTC
When running mouse-dpi-tool /dev/... it says:

If your resolution is not in the list, calculate it with:
	resolution=xxxxxx/inches, or
	resolution=xxxxxx/(mm * 25.4)

The last line, the operation to convert mm to inches is wrong, you always have more mm than inches, so you divide to convert. The correct formula is:

	resolution=xxxxxx/(mm / 25.4)

or:

	resolution=xxxxxx / mm * 25.4

or, my preferred:

	resolution=xxxxxx * 25.4 / mm
Comment 1 Lennart Poettering 2015-04-22 17:41:46 UTC
systemd is not the right component for this I fear. 

Let's reassign this to whot, he'll take care of it! Peter?
Comment 2 Peter Hutterer 2015-04-23 00:38:54 UTC
whoopsy. Thanks, fix pushed.


commit d26973216c71559ac08d145aebd8dec6fba14349
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Thu Apr 23 10:36:55 2015 +1000

    tools: fix help string for manual DPI calculation


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.